fix(Icon): fix badge number align (#6975)
* Revert "fix(Info): number vertical align center (#6952)"

This reverts commit 3eb8e00843dc7f5cfcac40ffd0abb2e474573035.

* style(Icon): fix badge number align

* fix(Icon): line-height

--- a/src/style/var.less
+++ b/src/style/var.less
@@ -419,6 +419,7 @@
 @info-background-color: @red;
 @info-dot-color: @red;
 @info-dot-size: 8px;
+@info-font-family: -apple-system-font, Helvetica Neue, Arial, sans-serif;
 
 // Image
 @image-placeholder-text-color: @gray-6;
